--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -1,11 +1,19 @@
 server.port=8080
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:~/Eshop
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:~/Eshop
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+#
+#spring.jpa.show-sql=true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/eShop?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=admin
 
-spring.jpa.show-sql=true
