--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,6 @@
             <artifactId>liquibase-core</artifactId>
             <version>3.4.1</version>
         </dependency>
-
-
     </dependencies>
 
     <build>
@@ -74,6 +72,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <propertyFile>src/main/resources/db/changelog/liquibase.properties</propertyFile>
+                </configuration>
             </plugin>
         </plugins>
     </build>
