--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/eShop?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
 
+liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xml
+
