--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <!-- LIBRARIES -->
+        <liquibase-core.version>3.4.1</liquibase-core.version>
     </properties>
 
     <dependencies>
@@ -63,7 +65,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>3.4.1</version>
+            <version>${liquibase-core.version}</version>
         </dependency>
     </dependencies>
 
@@ -76,7 +78,7 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>${liquibase-core.version}</version>
                 <configuration>
                     <propertyFile>src/main/resources/db/changelog/liquibase.properties</propertyFile>
                 </configuration>
