--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,17 +9,10 @@ server.port=8080
 #spring.h2.console.path=/h2
 #
 #spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.generate-ddl=false
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/eShop?useSSL=false
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=admin
+spring.datasource.password=test
 
 liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xml
-
-=======
-spring.datasource.password=admin
->>>>>>> Master
