--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eShop?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=test
+spring.datasource.password=admin
 
 liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xml
