--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,12 @@ server.port=8080
 #spring.h2.console.path=/h2
 #
 #spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eShop?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
 
 liquibase.change-log=classpath:db/changelog/liquibase-changeLog.xml
+
+security.salt = verySecretOne
