--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8080
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 #
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eShop?useSSL=false
